--- a/ds1t-a/Luiz Gustavo/css/airpods.css
+++ b/ds1t-a/Luiz Gustavo/css/airpods.css
@@ -1,11 +1,11 @@
-.section-airpods-watch{
+.section-airpods-watch {
     background: linear-gradient(90deg, #1B1048 0%, #560762 100%);
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 20vh 85vh;
 }
 
-.div-title{
+.div-title {
     height: 25vh;
     grid-row: 1;
     display: flex;
@@ -17,7 +17,7 @@
     grid-column: 1;
 }
 
-.airpods{
+.airpods {
     height: 85vh;
     display: flex;
     flex-direction: column;
@@ -35,8 +35,7 @@
     text-align: justify;
 }
 
-
-.text-airpods{
+.text-airpods {
     color: white;
     width: 700px;
     font-size: 1.75rem;
@@ -44,9 +43,29 @@
     text-align: justify;
 }
 
-.airpods-pro{
+.airpods-pro {
     display: flex;
     align-items: center;
     gap: 15px;
 }
 
+@media (max-width: 960px) {
+    .section-airpods-watch {
+        display: flex;
+        flex-direction: column;
+        height: 150vh;
+    }
+    .div-title {
+        height: 15vh;
+    }
+    .text-button-airpods {
+        font-size: 1.5rem;
+    }
+    .text-airpods {
+        font-size: 1.5rem;
+    }
+    .airpods {
+        height: 60vh;
+        gap: 75px;
+    }
+}
