--- a/ds1t-a/Luiz Gustavo/css/ipad.css
+++ b/ds1t-a/Luiz Gustavo/css/ipad.css
@@ -6,7 +6,7 @@
 }
 
 .main-ipad {
-    width: 1500px;
+    width: 79vw;
     justify-content: space-between;
     display: flex;
     align-items: center;
@@ -18,4 +18,14 @@
     flex-direction: column;
     align-items: center;
     gap: 25px;
+}
+
+@media (max-width: 960px) {
+    .section-ipad {
+        gap: 50px;
+    }
+    .main-ipad {
+        display: flex;
+        flex-direction: column;
+    }
 }
