--- a/ds1t-a/Luiz Gustavo/css/mac.css
+++ b/ds1t-a/Luiz Gustavo/css/mac.css
@@ -1,19 +1,28 @@
-.section-mac{
+.section-mac {
     background-color: black;
-
 }
 
-.title-mac{
-    display: flex;
-    justify-content: center;
-    color: white;
-    font-weight: 700;
-    font-size: 6rem;
-}
-
-.main-mac{
+.main-mac {
     display: grid;
     grid-template-columns: 50% 50%;
     height: 75vh;
 }
 
+@media (max-width: 960px) {
+    .section-mac {
+        height: 125vh;
+    }
+    .main-mac {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+    .macs {
+        width: 580px;
+        height: auto;
+    }
+    .mac-pro {
+        width: 650px;
+        height: auto;
+    }
+}
