--- a/ds1t-b/André Luiz/css/mobile.css
+++ b/ds1t-b/André Luiz/css/mobile.css
@@ -101,6 +101,72 @@
     color: #000;
 }
 
+@media (max-width:640px){
+    .section-mobile{
+        height: 210vh;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 120px 1fr 1fr 1fr;
+    }
+
+    .title-mobile-container{
+        grid-row: 1;
+        grid-column: 1/-1;
+        padding-left: 0;
+        display: flex;
+        width: 100%;
+        justify-content: center;
+    }
+
+    .title-mobile{
+        font-size: 5rem;
+    }
+
+    .promotion-container1{
+        grid-column: 1;
+        grid-row: 2;
+        gap: 56px;
+    }
+
+    .promotion-container1 span{
+        font-size: 3rem;
+    }
+
+    .promotion-container1 a{
+        width: 300px;
+        height: 80px;
+    }
+
+    .promotion-text-container-mobile{
+        grid-column: 1;
+        grid-row:3;   
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        text-align: center;
+    }
+
+    .promotion-text{
+        font-size: 3rem;
+        gap: 10px;
+    }
+
+    .promotion-container2{
+        grid-column: 1;
+        grid-row: 4;
+        place-self: center;
+    }
+
+    .promotion-container2 a{
+        width: 300px;
+        height: 80px;
+    }
+
+    .promotion-container2 span{
+        font-size: 3rem;
+    }
+}
+
 @media (max-width: 320px){
 
     .section-mobile{
@@ -118,6 +184,8 @@
         padding-left: 0;
         display: flex;
         align-items: center;
+        gap: 56px;
+
 }
 
     .promotion-container1{
