--- a/ds1t-b/André Luiz/css/tab.css
+++ b/ds1t-b/André Luiz/css/tab.css
@@ -73,6 +73,49 @@
     color: #000;
 }
 
+@media (max-width: 640px){
+    .section-tab{
+        height: 170vh;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 100px 1fr 3fr;
+    }
+
+    .title-tab-container{
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+        grid-row: 1;
+        grid-column: 1;
+    }
+
+    .tab-promotion-container{
+        grid-row: 2;
+        grid-column: 1;
+    }
+
+    .tab-promotion-container a{
+        width: 300px;
+        height: 80px;
+    }
+
+    .tab-text-container{
+        grid-column: 1;
+        grid-row: 3;
+        max-width: 0;
+        height: 0;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        gap: 10px;
+    }
+
+    .tab-text-container p{
+        font-size: 3rem;
+    }
+}
+
 @media (max-width: 960px) {
     .tab-text{
         font-size: 2rem;
