--- a/ds1t-b/Projeto FF/home.css
+++ b/ds1t-b/Projeto FF/home.css
@@ -78,4 +78,57 @@
 /* MOBILE */
 @media(max-width:640px){
     
+    .menu{
+        width: 95%;
+        height: 95%;
+        padding: 0px;
+        align-items: center;
+        padding-left: 20px;
+        padding-top: 25px;
+        gap: 25px;
+    }
+
+    .logo{
+        width: 325px;
+        height: 150px;
+    }
+
+    .botoes{
+        width: 100%;
+        height: 50px;
+    }
+
+    .botao{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        width: 300px;
+        height: 70px;
+        background: #1C3F50;
+        border: 1px solid #000000;
+        padding: 22px 117px;
+    }
+
+    .texto-botao{
+        font-family: 'Ubuntu';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 36px;
+        line-height: 41px;
+        color: #FFFFFF;
+    }
+
+    .botao:hover{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        width: 300px;
+        height: 70px;
+        background: #1C3F50;
+        border: 1px solid #000000;
+    }
+
+    
 }
