--- a/ds1t-a/Luiz Gustavo/css/airpods.css
+++ b/ds1t-a/Luiz Gustavo/css/airpods.css
@@ -69,3 +69,29 @@
         gap: 75px;
     }
 }
+
+@media (max-width: 640px) {
+    .section-airpods-watch {
+        height: 110vh;
+    }
+    .div-title {
+        font-size: 2.25rem;
+        height: 10vh;
+    }
+    .airpods {
+        gap: 30px;
+    }
+    .text-airpods {
+        font-size: 0.875rem;
+        width: 80vw;
+    }
+    .airpods-pro {
+        display: flex;
+        flex-direction: column;
+        width: 80vw;
+    }
+    .text-button-airpods {
+        font-size: 1rem;
+        width: 80vw;
+    }
+}
