--- a/ds1t-a/Luiz Gustavo/css/title.css
+++ b/ds1t-a/Luiz Gustavo/css/title.css
@@ -1,7 +1,13 @@
-.title{
+.title {
     display: flex;
     justify-content: center;
     color: white;
     font-weight: 700;
     font-size: 6rem;
+}
+
+@media (max-width: 640px) {
+    .title {
+        font-size: 2.25rem;
+    }
 }
