Versão desktop finalizada

--- a/ds1t-b/yasmin/css/avaliacoes.css
+++ b/ds1t-b/yasmin/css/avaliacoes.css
@@ -43,3 +43,9 @@
     align-self: center;
     margin: 20px;
 }
+.av:hover{
+    -webkit-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05);
+    transition: 1s;
+}
