--- a/ds1t-b/André Luiz/css/mobile.css
+++ b/ds1t-b/André Luiz/css/mobile.css
@@ -101,6 +101,16 @@
     color: #000;
 }
 
+.promotion-container1 a:hover{
+    opacity: 70%;    
+    transition: .4s;
+}
+
+.promotion-container2 a:hover{
+    opacity: 70%;
+    transition: .4s;
+}
+
 @media (max-width:640px){
     .section-mobile{
         height: 210vh;
