Atualização sem sliders

--- a/ds1t-a/juliaSoares/css/historia.css
+++ b/ds1t-a/juliaSoares/css/historia.css
@@ -3,6 +3,7 @@
     grid-template-areas: "imagem texto";
     grid-template-columns: 1fr 1fr;
     background-color: #f8f3e7;
+    height: auto;
 }
 
 .store-starbucks {
