--- a/ds1t-a/juliaSoares/css/style.css
+++ b/ds1t-a/juliaSoares/css/style.css
@@ -1,47 +1,87 @@
-:root {
-    --primary-color: #006241;
-    --color-backgroun: #f8f3e7;
-}
-
-body {
-    display: grid;
-    grid-template-areas: "content";
-}
-
-header {
-    grid-area: content;
-    display: flex;
-    place-self: start center;
-    background-color: #006241;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 125px;
-    z-index: 1;
-}
-
-main {
-    grid-area: content;
-    /* background-color: mediumorchid; */
-    width: 100%;
-}
-
-niveis-de-torra {
-    background-color: plum;
-}
-
-.menu {
-    background-color: powderblue;
-}
-
-section {
-    height: 100vh;
-}
-
-footer {
-    grid-area: content;
-    place-self: end start;
-    background-color: mediumturquoise;
-    width: 100%;
-    height: 300px;
-}
+     html {
+         scroll-behavior: smooth;
+     }
+     
+      :root {
+         --primary-color: #006241;
+         --color-backgroun: #f8f3e7;
+     }
+     
+     body {
+         display: grid;
+         grid-template-areas: "content";
+         background-color: #f8f3e7;
+     }
+     
+     .access-button {
+         width: 40%;
+         float: right;
+         border-radius: 50px;
+         border: 8px solid #fff;
+     }
+     
+     header {
+         grid-area: content;
+         display: flex;
+         place-self: start center;
+         background-color: #006241;
+         justify-content: space-between;
+         align-items: center;
+         width: 100%;
+         height: 125px;
+         z-index: 1;
+     }
+     
+     main {
+         grid-area: content;
+         width: 100%;
+     }
+     
+     section {
+         height: 100vh;
+     }
+     
+     footer {
+         display: flex;
+         flex-direction: column;
+         background-color: #006241;
+         width: 100%;
+         height: 400px;
+         justify-content: center;
+         align-items: center;
+         position: relative;
+         color: white;
+     }
+     
+     .logo-footer {
+         height: 200px;
+         position: absolute;
+         transform: translateY(-90%);
+     }
+     
+     .contatos {
+         display: flex;
+         font-size: 1.75rem;
+         flex-direction: row;
+         gap: 400px;
+         padding: 50px;
+     }
+     
+     .social-icon {
+         display: flex;
+         gap: 20px;
+         font-size: 2rem;
+         padding-right: 50px;
+     }
+     
+     .linha {
+         border-top: 2px solid #fff;
+         width: 100%;
+         padding: 30px;
+     }
+     
+     .direitos {
+         width: 800px;
+         font-size: 1.25rem;
+         text-align: center;
+     }
