--- a/ds1t-b/Projeto FF/style.css
+++ b/ds1t-b/Projeto FF/style.css
@@ -55,7 +55,10 @@ footer{
     }
 
     .historia{
-        display: none;
+        width: 100%;
+        height: 1440px ;
+        background: linear-gradient(0deg, rgba(255, 255, 255, 0.03), rgba(255, 255, 255, 0.03)), rgba(12, 20, 27, 0.87);
+        background-size: cover;
     }
     
     .personagens{
