--- a/ds1t-b/one-page-nike/css/home.css
+++ b/ds1t-b/one-page-nike/css/home.css
@@ -35,3 +35,10 @@
 .menu__bars {
     display: none;
 }
+
+/* MOBILE */
+@media (max-width:640px){
+    .menu__bars {
+        display: flex;
+    }
+}
