--- a/ds1t-b/one-page-nike/css/basketball.css
+++ b/ds1t-b/one-page-nike/css/basketball.css
@@ -12,7 +12,7 @@
 }
 
 .title-basketball {
-    margin-bottom: auto;
+    margin-bottom: 65px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -72,22 +72,39 @@
     transition: 500ms linear;
 }
 
-.circulos-interacao-basketball {
-    margin-top: 5px;
-    display: flex;
-    gap: 20px;
-}
+/* MOBILE */
+@media (max-width:640px){
+    .basketball{
+        align-items: center;
+    }
 
-.basketball .circulo1 {
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-color: #ff7300;
-}
+    .basketball .img-container-basketball {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 250px;
+        gap: 30px;
+    }
 
-.basketball .circulo2 {
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-color: #FFFF;
+    .title-basketball {
+        font-size: 2.35rem;
+    }
+
+    .basketball-t2 {
+        font-size: 0.65rem;
+    }
+
+    .basketball .images-basketball {
+        justify-content: center;
+        width: 200px;
+        height: 200px;
+    }
+
+    .description-basketball {
+        display: flex;
+        flex-direction: row;
+        max-width: 200px;
+        column-gap: 20px;
+        font-size: 0.75rem;
+    }
 }
