--- a/ds1t-b/projeto-hamburguer/css/quem-somos.css
+++ b/ds1t-b/projeto-hamburguer/css/quem-somos.css
@@ -56,6 +56,10 @@
         justify-content: center;
         text-align: center;
     }
+    .quem-somos__title{
+        font-size: 4rem;
+        width: 240px;
+    }
     .quem-somos__photo{
         width: 100%;
         height: 320px;
@@ -66,16 +70,22 @@
         align-items: center;
     }
     .description__image{
-        width: 420px;
+        width: 320px;
     }
     .description-container{
         display: flex;
         flex-direction: column;
         align-items: center;
     }
-    .description__text{
-        display: flex;
-        text-align: center;
+    .description__title{
         font-size: 1.5rem;
+    }
+    .description__title2{
+        text-align: center;
+    }
+    .description__text{
+        text-align: center;
+        font-size: 1rem;
+        width: 300px;
     }
 }
