--- a/ds1t-b/one-page-nike/css/follow-us.css
+++ b/ds1t-b/one-page-nike/css/follow-us.css
@@ -28,7 +28,6 @@
     justify-content: space-between;
     gap: 20px;
     margin-bottom: 170px;
-    margin-top: auto;
 }
 
 .icons-social .icon {
@@ -55,6 +54,6 @@
     .icons-social {
         display: flex;
         flex-direction: column;
+        margin-top: 35px;
     }
-    
 }
