--- a/ds1m-b/Paula-B/css/curiosidades.css
+++ b/ds1m-b/Paula-B/css/curiosidades.css
@@ -5,10 +5,11 @@
 
 .curiosidade_text {
     display: flex;
+    flex-direction: column;
     margin-top: 2vw;
     margin-left: 23vw;
-    gap: 200px;
-    width: 1200px;
+    gap: 30px;
+    width: 900px;
 }
 
 .curiosidade_title {
