--- a/ds1m-b/Paula-B/css/responsive.css
+++ b/ds1m-b/Paula-B/css/responsive.css
@@ -4,9 +4,11 @@
     .description-text {
         display: flex;
         flex-direction: column-reverse;
+        font-size: 3vw;
     }
     .description-title {
         display: grid;
+        font-size: 3vw;
     }
     .curiosidade_text {
         display: flex;
@@ -14,7 +16,13 @@
         width: 40%;
         margin-left: 30vw;
         gap: 30px;
-        font-size: 2vw;
+        font-size: 2.3vw;
+    }
+    .cuidados_list {
+        font-size: 3vw;
+    }
+    .porque_title {
+        font-size: 3vw;
     }
     .text {
         font-size: 80%;
@@ -42,19 +50,33 @@
 /* MOBILE  */
 
 @media(max-width:640px) {
-    nav {
-        display: none;
+    .menu {
+        font-size: 5.5vw;
+        gap: 30px;
+    }
+    .title_main {
+        font-size: 8vw;
+    }
+    .curiosidade_text {
+        font-size: 3vw;
+        gap: 15px;
     }
     .racas-container {
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 4vw;
+        gap: 3vw;
+    }
+    .raca {
+        height: 33vw;
     }
     .racas-containeer {
         display: none;
     }
     .name {
+        display: none;
+    }
+    .name_text {
         display: none;
     }
     .outros {
