--- a/ds1m-b/lucasvinicius/css/logos.css
+++ b/ds1m-b/lucasvinicius/css/logos.css
@@ -2,13 +2,6 @@
     height: 3.2rem;
 }
 
-.logoBo1 {
-    width: 30%;
-    padding-top: 90px;
-    display: flex;
-    justify-content: center;
-}
-
 .logo_bo1 {
-    
+    width: 300px;
 }
