--- a/ds1m-b/lucasvinicius/css/bo1.css
+++ b/ds1m-b/lucasvinicius/css/bo1.css
@@ -1,14 +1,15 @@
 #bo1{
     display: flex;
     flex-direction: column;
-    gap: 130px;
+    justify-content: center;
 }
+
 
 #bo1::before {
     content: "";
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: black;
     background-image: url(../img/CALL-OF-DUTY-BLACK-OPS-900x503\ 1.png);
     background-repeat: no-repeat;
