--- a/ds1m-b/lucasvinicius/css/home.css
+++ b/ds1m-b/lucasvinicius/css/home.css
@@ -8,8 +8,8 @@
 #home::before {
     content: "";
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: black;
     background-image: url(../img/gifHome.gif);
     background-repeat: no-repeat;
