--- a/ds1t-b/Projeto FF/historia.css
+++ b/ds1t-b/Projeto FF/historia.css
@@ -87,7 +87,6 @@
         padding-top: 0px;
         width: 100%;
         height: 641px;
-        top: 101px;
         align-items: center;
     }
 
@@ -110,7 +109,7 @@
         height: 200px;
     }
 
-    .conclusoa{
+    .conclusao{
         gap: 0px;
     }
 
