--- a/ds1t-b/Projeto FF/style.css
+++ b/ds1t-b/Projeto FF/style.css
@@ -56,13 +56,13 @@ footer{
 
     .historia{
         width: 100%;
-        height: 1440px ;
+        height: 1305px ;
+        grid-template-rows: 100px 1170px;
         background: linear-gradient(0deg, rgba(255, 255, 255, 0.03), rgba(255, 255, 255, 0.03)), rgba(12, 20, 27, 0.87);
         background-size: cover;
     }
     
     .personagens{
-        display: none;
     }
 
     .producao{
