--- a/ds1t-a/juliaSoares/css/niveis-de-torra.css
+++ b/ds1t-a/juliaSoares/css/niveis-de-torra.css
@@ -1,4 +1,4 @@
-niveis-de-torra {
+.niveis-de-torra {
     display: grid;
     align-content: center;
 }
@@ -7,7 +7,6 @@ niveis-de-torra {
     height: 700px;
     width: 100%;
     background-color: #1E3932;
-    margin-top: 10%;
     display: grid;
     grid-template-areas: "texto imagem";
     grid-template-columns: 1fr 1fr;
