um icone pronto

--- a/ds1t-a/lohannes/css/mapa.css
+++ b/ds1t-a/lohannes/css/mapa.css
@@ -341,7 +341,7 @@
     justify-content: center;
 }
 
-.titulo{
+.tituloM{
     font-weight: 100;
     font-family: 'Marcellus SC', serif;
     font-size: 2rem;
