--- a/ds1t-a/lohannes/css/icones-atla.css
+++ b/ds1t-a/lohannes/css/icones-atla.css
@@ -40,7 +40,8 @@
 }
 
 .aangInfo{
-    display: none;
+    opacity: 0;
+    display: flex;
     align-items: center;
     flex-direction: column;
     width: 33%;
@@ -51,8 +52,13 @@
 }
 
 .info2{
-    display: none;
+    opacity: 0;
+    display: flex;
     width: 33%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2%;
 }
 
 .nomeAang{
@@ -71,8 +77,12 @@
     font-size: 1.25rem;
 }
 
-.aangIcone:focus .aangInfo, .info2{
-    display: flex;
+.aangIcone:focus .aangInfo{
+    opacity: 1;
+}
+
+.aangIcone:focus .info2{
+    opacity: 1;
 }
 
 .aangIcone:focus .aang_foto{
@@ -180,4 +190,35 @@
     width: 100%;
     height: 100%;
     position: absolute;
+}
+
+.elemento{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.avatarElemento{
+    width: 144px;
+    height: 141.76px;
+    background: #B5B5B5;
+    border-width: 4px 2px 2px 4px;
+    border-style: solid;
+    border-color: #FFFFFF;
+    border-radius: 27px;
+    display: grid;
+    place-items: center;
+}
+
+.elementoNome{
+    font-size: 1.875rem;
+    font-family: 'Marcellus SC', serif;
+    font-weight: 400;
+}
+
+.aangGif{
+    border-width: 4px 2px 2px 4px;
+    border-style: solid;
+    border-color: #FFFFFF;
+    border-radius: 31px;
 }
